fix for modal dialog overflow

--- a/editor/jaxedit.css
+++ b/editor/jaxedit.css
@@ -147,7 +147,7 @@ body {
 }
 
 #overlay {
-  visibility: hidden;
+  display: none;
   position: absolute;
   left: 0px;
   top: 0px;
@@ -162,7 +162,7 @@ body {
 }
 
 #container {
-  visibility: hidden;
+  display: none;
   position: absolute;
   left: 0px;
   top: 0px;
